# yurutsuku

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  nagomi_complete_spec_v1.3.md  package-lock.json  package.json  yurutsuku_complete_spec_v1.3.md
.codex/skills/architecture-editor/: SKILL.md
.codex/skills/concept-editor/: SKILL.md
.codex/skills/plan-editor/: SKILL.md
.codex/skills/spec-editor/: SKILL.md
apps/orchestrator/: integration.test.js  package.json
apps/orchestrator/e2e/: codex.hook.e2e.js  codex.prime-minister.e2e.js  driver_paths.js  ipc.session.e2e.js  settings.open-from-terminal.e2e.js  (+14 more)
apps/orchestrator/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/orchestrator/src-tauri/capabilities/: default.json
apps/orchestrator/src-tauri/src/: completion_hook.rs  ipc_session.rs  judge.rs  main.rs  notify.rs  worker.rs
apps/orchestrator/src-tauri/tests/: e2e_mode_switch.rs
crates/nagomi/: Cargo.toml
crates/nagomi-protocol/: Cargo.toml
crates/protocol/: Cargo.toml
crates/worker/: Cargo.toml
crates/yuru/: Cargo.toml
docs/: OVERVIEW.md  architecture.md  concept.md  plan.archive.md  plan.md  spec.md  tauri-driver-e2e.md  usage.md
docs/delta/: DR-20260313-watcher-frame-on-focus.apply.md  DR-20260313-watcher-frame-on-focus.archive.md  DR-20260313-watcher-frame-on-focus.md  DR-20260313-watcher-frame-on-focus.verify.md  DR-20260313-watcher-native-window.apply.md  DR-20260313-watcher-native-window.archive.md  DR-20260313-watcher-native-window.md  DR-20260313-watcher-native-window.verify.md  REVIEW_CHECKLIST.md  TEMPLATE.md
testdata/: protocol_fixtures.json
tooling/: capture-codex-notify.js  codex-hook-launch.cmd  codex-hook-test.ps1  probe-codex-notify.ps1  run-codex-hook-test.ps1  verify-codex-notify.ps1
tooling/terminal-debug-kit/: README.md  worker_smoke.js  worker_smoke.ndjson
(+14 files in other folders)
