[package]
name = "nagomi-orchestrator"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.5.3", features = ["tray-icon", "test"] }
tauri-plugin-global-shortcut = "2.0.0"
tauri-plugin-notification = "2.0.0"
nagomi-protocol = { path = "../../../crates/nagomi-protocol" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_Diagnostics_Debug", "Win32_System_Environment", "Win32_UI_WindowsAndMessaging"] }
webview2-com = "0.38.2"
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Com", "Win32_UI_Shell"] }
winreg = "0.52"

[build-dependencies]
tauri-build = "2.5.3"

[dev-dependencies]
fantoccini = "0.19"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "time"] }
